--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -759,7 +759,7 @@ a {
 }
 .cid-sqhmejga7s .dropdown-menu,
 .cid-sqhmejga7s .navbar.opened {
-  background: #ffffff !important;
+  background: #f8f8f8 !important;
 }
 .cid-sqhmejga7s .nav-item:focus,
 .cid-sqhmejga7s .nav-link:focus {
@@ -794,7 +794,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqhmejga7s .navbar.opened {
   transition: all 0.3s;
@@ -939,7 +939,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sqhmejga7s .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqhmejga7s .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -2616,7 +2616,7 @@ a {
 }
 .cid-sqT44FK6HP .dropdown-menu,
 .cid-sqT44FK6HP .navbar.opened {
-  background: #ffffff !important;
+  background: #f8f8f8 !important;
 }
 .cid-sqT44FK6HP .nav-item:focus,
 .cid-sqT44FK6HP .nav-link:focus {
@@ -2651,7 +2651,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqT44FK6HP .navbar.opened {
   transition: all 0.3s;
@@ -2796,7 +2796,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sqT44FK6HP .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqT44FK6HP .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -3329,7 +3329,7 @@ a {
 }
 .cid-sqWdVze5Hx .dropdown-menu,
 .cid-sqWdVze5Hx .navbar.opened {
-  background: #ffffff !important;
+  background: #f8f8f8 !important;
 }
 .cid-sqWdVze5Hx .nav-item:focus,
 .cid-sqWdVze5Hx .nav-link:focus {
@@ -3364,7 +3364,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqWdVze5Hx .navbar.opened {
   transition: all 0.3s;
@@ -3509,7 +3509,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sqWdVze5Hx .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqWdVze5Hx .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -4182,7 +4182,7 @@ a {
 }
 .cid-sqhmejga7s .dropdown-menu,
 .cid-sqhmejga7s .navbar.opened {
-  background: #ffffff !important;
+  background: #f8f8f8 !important;
 }
 .cid-sqhmejga7s .nav-item:focus,
 .cid-sqhmejga7s .nav-link:focus {
@@ -4217,7 +4217,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqhmejga7s .navbar.opened {
   transition: all 0.3s;
@@ -4362,7 +4362,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sqhmejga7s .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqhmejga7s .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -4732,7 +4732,7 @@ a {
 }
 .cid-sqT44FK6HP .dropdown-menu,
 .cid-sqT44FK6HP .navbar.opened {
-  background: #ffffff !important;
+  background: #f8f8f8 !important;
 }
 .cid-sqT44FK6HP .nav-item:focus,
 .cid-sqT44FK6HP .nav-link:focus {
@@ -4767,7 +4767,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqT44FK6HP .navbar.opened {
   transition: all 0.3s;
@@ -4912,7 +4912,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sqT44FK6HP .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqT44FK6HP .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -5329,7 +5329,7 @@ a {
 }
 .cid-sqYPwJJhEZ .dropdown-menu,
 .cid-sqYPwJJhEZ .navbar.opened {
-  background: #ffffff !important;
+  background: #f8f8f8 !important;
 }
 .cid-sqYPwJJhEZ .nav-item:focus,
 .cid-sqYPwJJhEZ .nav-link:focus {
@@ -5364,7 +5364,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqYPwJJhEZ .navbar.opened {
   transition: all 0.3s;
@@ -5509,7 +5509,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sqYPwJJhEZ .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #f8f8f8;
 }
 .cid-sqYPwJJhEZ .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
